--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-.open{
-    background-color:red;
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 6px;
+    background: #1e1e1e;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(8, 145, 178);
+    border-radius: 6px;
+    border: 3px solid #1e1e1e;
 }
